# miza_case_study

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_drop_audit_request_id_unique.py  0003_audit_log_tamper_protection.py  0004_asset_id_to_string.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: analytics.py  events.py  health.py
app/cache/: redis_client.py
app/core/: config.py  logging.py  metrics.py  rate_limit.py  security.py  tracing.py
app/db/: session.py
app/models/: audit_log.py  event.py
app/schemas/: analytics.py  event.py
app/services/: analytics_service.py  audit_service.py  event_service.py
tests/: conftest.py
tests/integration/: test_analytics_api.py  test_events_api.py  test_health_api.py  test_postgres_specific.py
tests/unit/: test_analytics_service.py  test_audit_service.py  test_event_service.py  test_logging.py  test_metrics.py  test_rate_limit.py  test_schemas.py  test_security.py  test_tracing.py
