[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miza-analytics"
version = "1.0.0"
description = "Real-Time Investment Event Analytics Microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis[hiredis]>=5.2.0",
    "python-json-logger>=3.2.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 83

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "anyio>=4.12.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
    "types-redis>=4.6.0.20241004",
    "httpx>=0.28.0",
]
